:bug: Fix lissajous src paths.

--- a/environment/index.html
+++ b/environment/index.html
@@ -14,33 +14,33 @@
   <body class="p-4 h-screen bg-gray-900">
     <div id="app" class="h-full"></div>
 
-    <script src="../lissajous/vendor/bufferLoader.js"></script>
+    <script src="./lissajous/vendor/bufferLoader.js"></script>
 
-    <script src="../lissajous/context.js"></script>
-    <script src="../lissajous/track.core.js"></script>
-    <script src="../lissajous/track.events.js"></script>
-    <script src="../lissajous/track.api.js"></script>
-    <script src="../lissajous/track.oscillator.js"></script>
-    <script src="../lissajous/track.sampler.js"></script>
-    <script src="../lissajous/track.envelope.js"></script>
-    <script src="../lissajous/track.scheduler.js"></script>
-    <script src="../lissajous/track.sequencer.js"></script>
-    <script src="../lissajous/track.filter.js"></script>
-    <script src="../lissajous/track.record.js"></script>
+    <script src="./lissajous/context.js"></script>
+    <script src="./lissajous/track.core.js"></script>
+    <script src="./lissajous/track.events.js"></script>
+    <script src="./lissajous/track.api.js"></script>
+    <script src="./lissajous/track.oscillator.js"></script>
+    <script src="./lissajous/track.sampler.js"></script>
+    <script src="./lissajous/track.envelope.js"></script>
+    <script src="./lissajous/track.scheduler.js"></script>
+    <script src="./lissajous/track.sequencer.js"></script>
+    <script src="./lissajous/track.filter.js"></script>
+    <script src="./lissajous/track.record.js"></script>
 
-    <script src="../lissajous/track.effects.delay.js"></script>
-    <script src="../lissajous/track.effects.chorus.js"></script>
-    <script src="../lissajous/track.effects.tremolo.js"></script>
-    <script src="../lissajous/track.effects.filter.js"></script>
-    <script src="../lissajous/track.effects.reverb.js"></script>
-    <script src="../lissajous/track.effects.distortion.js"></script>
+    <script src="./lissajous/track.effects.delay.js"></script>
+    <script src="./lissajous/track.effects.chorus.js"></script>
+    <script src="./lissajous/track.effects.tremolo.js"></script>
+    <script src="./lissajous/track.effects.filter.js"></script>
+    <script src="./lissajous/track.effects.reverb.js"></script>
+    <script src="./lissajous/track.effects.distortion.js"></script>
 
-    <script src="../lissajous/group.js"></script>
-    <script src="../lissajous/generators.js"></script>
+    <script src="./lissajous/group.js"></script>
+    <script src="./lissajous/generators.js"></script>
 
-    <script src="../lissajous/vendor/tuna.js"></script>
+    <script src="./lissajous/vendor/tuna.js"></script>
 
-    <script src="../lissajous/vendor/recorder.js"></script>
+    <script src="./lissajous/vendor/recorder.js"></script>
 
     <script src="extras.js"></script>
     <script src="drag-and-drop.js"></script>
